@@ -15,6 +15,7 @@
     Jui contributed to Czech translation
     fix spacefm -p 1 nospec opens wrong panel
     always present window on create
+    dir change monitor truly canonicalize paths
 0.8.6   2013-02-13:
     fix cannot create directory or file on CentOS #253
     update russian translation
